--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.profiles.active=dev
 
 spring.datasource.url=jdbc:mysql://localhost:3306/dblyo_h
 #spring.datasource.url=jdbc:mysql://localhost:3306/dblyo?createDatabaseIfNotExist=true
-spring.datasource.username=app_user
-spring.datasource.password=lyodb2025
+spring.datasource.username=ccccccccccc
+spring.datasource.password=cccccccccccc
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
@@ -45,16 +45,16 @@ allowed.admin.ips=127.0.0.1,::1,*
 # SMTP Configuration 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=arthur.yuming@gmail.com
-spring.mail.password=vrumbcmjibzoufhr
+spring.mail.username=ccccccccccg@gmail.com
+spring.mail.password=cccccccccc
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
-spring.mail.from=arthur.yuming@gmail.com
-spring.mail.from.name=LYO 2026
+spring.mail.from=ccccccccccc@gmail.com
+spring.mail.from.name=LLL 2026
 
 email.template.base-path=classpath:/templates/emails/
 email.qrcode.width=250
